# sqs-file-spewer

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: main.rs
tests/: integration.rs
tests/resources/: test_messages.json  test_messages.txt
