[package]
name = "sqs-file-spewer"
version = "0.1.0"
authors = ["Ray Diaz <raydiaz@tuta.io>"]
edition = "2018"

[dependencies]
quicli = "0.3"
serde_json = "1.0"
rusoto_core = "0.42.0"
rusoto_sqs = "0.42.0"
rusoto_sts = "0.42.0"
futures = "0.1.16"
tokio-core = "0.1.17"
tokio = "0.1.7"
rayon = "1.3.0"
assert_cmd = "0.11"
predicates = "1.0"
itertools = "0.8.2"
uuid = {version = "0.4", features =["v4"]}
